
--Fixed removal in category editor when pattern has same object repeated.

--Added d/D key to category editor for duplicating object in a pattern.

--Made playback of recorded web events more robust in the face of (admitedly
  mysterious) playback timing variations.

--Finally fixed client-side cause of dropping stuff in a bad biome.  Fixes #479




Server Fixes

--Keeping diffWorking directory around after content build for forensic
  purposes (in case the weird Steam build bug happens again).

--Cursing by name radius is now 200 (was 32), and is a live server setting.
  Part of #496

--Server name at bottom of character detail page in family tree.

--Data-only diff bundle script has optional pause to check Steam build.

--Curse DB dump utility program prints date stamp for each entry.

--Fixed glitch in names timing out for curse purposes after someone dies.
  Fixes #511

--Fixed spurious creation of new family population logs when tutorial or cursed
  Eve picks a name.
 
--Improved reflector split/unsplit behavior in case where servers are spuriously
  offline.




Version 304   2020-January-17

--No longer playing eating animation when sticking food in clothing container.
  Fixes #490

--Fix overlap of hidden email/SteamID with GENETIC FITNESS label.  Fixes #491



Server Fixes

--Rewrote baby placement code, removing a bunch of deprecated cases.  When
  placing a player, we first find all non-curse-blocked, non-cooldown, 
  non-lineage-limit mothers, expanding to include cooldown mothers if we can't
  find any, and then expanding to include lineage limit mothers if we still 
  can't find any.  Then, from those available, we pick the mothers from the
  weakest race, and then, from those, we pick the mothers from the weakest
  family.  From those, we send the baby to one of those mothers at random, 
  weighted by Yum and warmth.  If there exist some fertile mothers, but all of
  them are curse-blocked, the player goes to d-town.  If there are absolutely