@@ -716,6 +716,21 @@ static void setupAlcohol( ObjectRecord *inR ) {
     }
 
 
+static void setupBlocksMoving( ObjectRecord *inR ) {
+    inR->blocksMoving = false;
+    
+    if( inR->blocksWalking ) {
+        inR->blocksMoving = true;
+        return;
+        }
+    
+    char *pos = strstr( inR->description, "+blocksMoving" );
+
+    if( pos != NULL ) {
+        inR->blocksMoving = true;
+        }
+    }
+
 
 
 int getMaxSpeechPipeIndex() {
@@ -785,6 +800,7 @@ float initObjectBankStep() {
                 setupNoBackAccess( r );                
 
                 setupAlcohol( r );
+                
 
                 // do this later, after we parse floorHugging
                 // setupWall( r );
@@ -907,6 +923,9 @@ float initObjectBankStep() {
                     
 
                 next++;
+
+                
+                setupBlocksMoving( r );
 
 
                 
@@ -3535,6 +3554,9 @@ int addObject( const char *inDescription,
     setupAlcohol( r );
 
     setupWall( r );
+
+    setupBlocksMoving( r );
+    
     
     r->toolSetIndex = -1;
     
