@@ -86,6 +86,12 @@ typedef struct ObjectRecord {
         // true for objects that cannot be walked through
         char blocksWalking;
         
+        // true for objects that moving objects (like animals) can't pass
+        // through.  All blocksWalking objects, plus some others that people
+        // can walk through.
+        char blocksMoving;
+        
+
         // true if sticks out and blocks on left or right of center tile
         char wide;
         
